Closed Bug 316150 Opened 20 years ago Closed 20 years ago

Splash screen fade is too slow over remote desktop

Categories

(SeaMonkey :: General, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: csthomas, Assigned: csthomas)

References

Details

(Keywords: fixed-seamonkey1.0.6, fixed-seamonkey1.1a, fixed1.8.1)

Attachments

(1 file)

The splash screen should not fade in when the user is running SeaMonkey remotely.
Not requesting reviews until I'm sure it works (hopefully I can test it from a remote machine tomorrow).
Attachment #202775 - Flags: superreview?(neil.parkwaycc.co.uk)
Attachment #202775 - Flags: review?(emaijala)
Comment on attachment 202775 [details] [diff] [review] Don't fade if the user is connected remotely Just makes me wonder if the fade is really worth it... anyway, r=me.
Attachment #202775 - Flags: review?(emaijala) → review+
Attachment #202775 - Flags: superreview?(neil.parkwaycc.co.uk) → superreview+
Comment on attachment 202775 [details] [diff] [review] Don't fade if the user is connected remotely SeaMonkey-only patch
Attachment #202775 - Flags: approval1.8rc2?
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Whiteboard: [cst: fixed-trunk, a?]
Attachment #202775 - Flags: approval1.8rc2? → branch-1.8.1?(neil)
Attachment #202775 - Flags: branch-1.8.1?(neil) → branch-1.8.1+
Whiteboard: [cst: fixed-trunk, a?]
Comment on attachment 202775 [details] [diff] [review] Don't fade if the user is connected remotely This has been on trunk and 1.8.1 for close to a year.
Attachment #202775 - Flags: approval-seamonkey1.0.6?
Comment on attachment 202775 [details] [diff] [review] Don't fade if the user is connected remotely a=me for SM1.0.6 (one down, ? to go)
Comment on attachment 202775 [details] [diff] [review] Don't fade if the user is connected remotely a=me for 1.0.6
Attachment #202775 - Flags: approval-seamonkey1.0.6? → approval-seamonkey1.0.6+
*** Bug 359932 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: