Bug 316150 Don't fade splash screen fade when using remote desktop r=ere sr=neil